Fixed up a bunch more miscellanious potential problems, and a few more optimisations.